# agentzero

./: .dockerignore  .env.example  .gitignore  Dockerfile  SCALING.md  agent_state.py  agentzero_api.py  auth.py  context_builder.py  debug_output.txt  docker-compose.yml  error_handler.py  executor.py  graph.py  intent_router.py  llm_service.py  memory_writer.py  ollama_config.py  openapi.yaml  planner.py  policy_enforcer.py  pyproject.toml  pytest_output.txt  pytest_pipeline_failures.txt  pytest_scheduler_failures.txt  reproduce_calendar.py  requirements.txt  response_composer.py  scheduler.py  test_agentzero.py  test_results.txt  test_ws_connection.py  verify_planner.py  verify_response.py  verify_router.py  verify_timezone.py
.github/workflows/: docker-build.yml
data/: calendar.ics
memory/: __init__.py
skills/: __init__.py  add_task.py  habit_tracker.py  task_planner.py
src/agentzero/: agent_state.py  context_builder.py  encryption.py  error_handler.py  evaluator.py  executor.py  graph.py  intent_router.py  llm_service.py  memory_writer.py  metrics.py  planner.py  policy_enforcer.py  response_composer.py  scheduler.py  session_store.py  supervisor.py
static/: dashboard.html
tests/: conftest.py  test_agents.py  test_calendar_tool.py  test_chroma.py  test_encryption.py  test_intent_router.py  test_metrics.py  test_pipeline.py  test_planner.py  test_response_composer.py  test_scheduler.py  test_session_store.py  test_supervisor.py  verify_response.py  verify_router.py  verify_scheduler_logic.py
tools/: __init__.py  calendar.py  memory_tool.py
(+19 files in other folders)
